--- a/index.html
+++ b/index.html
@@ -104,8 +104,15 @@
         <div style="background: rgba(255,255,255,0.2); padding: 8px 16px; border-radius: 20px;">Lifetime Warranty</div>
       </div>
     </div>
-    <!-- 3D Phone (Spline Embed) -->
-    <iframe id="phone-3d" src='https://my.spline.design/untitled-6e0b4518d8d8a8a5d0d4a4d4a4d4a4d4/' frameborder='0' width='100%' height='100%'></iframe>
+<lottie-player 
+  src="https://assets1.lottiefiles.com/packages/lf20_3rwasyjy.json" 
+  background="transparent" 
+  speed="1" 
+  style="width: 300px; height: 300px; margin: 0 auto;"
+  loop autoplay>
+</lottie-player>
+<!-- Add this script to <head> -->
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </section>
 
   <!-- Repair Form -->
